fix: sidenav responsive on small screens

--- a/src/stylesheets/view-specific/nav.scss
+++ b/src/stylesheets/view-specific/nav.scss
@@ -79,6 +79,7 @@
     position: absolute;
     height: 100vh;
     width: 300px;
+    max-width: 100vw;
     background-color: rgb(27, 27, 27);
     left: 0;
     z-index: 3;
